--- a/MiniDatabase/MiniDatabase.csproj
+++ b/MiniDatabase/MiniDatabase.csproj
@@ -61,8 +61,8 @@
     <Compile Include="Content\ChooseDatabase.xaml.cs">
       <DependentUpon>ChooseDatabase.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Content\ResultsTab\ResultAdd.xaml.cs">
-      <DependentUpon>ResultAdd.xaml</DependentUpon>
+    <Compile Include="Content\ResultsTab\ResultDetail.xaml.cs">
+      <DependentUpon>ResultDetail.xaml</DependentUpon>
     </Compile>
     <Compile Include="Content\ResultsTab\ResultList.xaml.cs">
       <DependentUpon>ResultList.xaml</DependentUpon>
@@ -107,10 +107,6 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Content\Detail.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Content\ChooseDatabase.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -119,7 +115,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Content\ResultsTab\ResultAdd.xaml">
+    <Page Include="Content\ResultsTab\ResultDetail.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -163,9 +159,6 @@
     </Compile>
     <Compile Include="Content\CreateEnums.xaml.cs">
       <DependentUpon>CreateEnums.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Content\Detail.xaml.cs">
-      <DependentUpon>Detail.xaml</DependentUpon>
     </Compile>
     <Compile Include="Content\Results.xaml.cs">
       <DependentUpon>Results.xaml</DependentUpon>
