--- a/MiniDatabase/MiniDatabase.csproj
+++ b/MiniDatabase/MiniDatabase.csproj
@@ -70,6 +70,7 @@
     <Compile Include="CreateFields\CreateFieldBase.cs" />
     <Compile Include="Exceptions\ExceptionBadData.cs" />
     <Compile Include="Exceptions\ExceptionNoData.cs" />
+    <Compile Include="Misc\BindableDynamicDictionary.cs" />
     <Compile Include="Records\ControlValue.cs" />
     <Compile Include="Records\Record.cs" />
     <Compile Include="Records\RecordDescription.cs" />
